; ModuleID = '/home/carl/AnghaBench/linux/drivers/hid/extr_hid-wiimote-modules.c_wiimod_mp_close.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hid/extr_hid-wiimote-modules.c_wiimod_mp_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_dev = type { i32 }
%struct.wiimote_data = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@WIIPROTO_FLAG_MP_USED = common dso_local global i32 0, align 4
@WIIPROTO_REQ_NULL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.input_dev*)* @wiimod_mp_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wiimod_mp_close(%struct.input_dev* %0) #0 {
  %2 = alloca %struct.input_dev*, align 8
  %3 = alloca %struct.wiimote_data*, align 8
  %4 = alloca i64, align 8
  store %struct.input_dev* %0, %struct.input_dev** %2, align 8
  %5 = load %struct.input_dev*, %struct.input_dev** %2, align 8
  %6 = call %struct.wiimote_data* @input_get_drvdata(%struct.input_dev* %5)
  store %struct.wiimote_data* %6, %struct.wiimote_data** %3, align 8
  %7 = load %struct.wiimote_data*, %struct.wiimote_data** %3, align 8
  %8 = getelementptr inbounds %struct.wiimote_data, %struct.wiimote_data* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %4, align 8
  %11 = call i32 @spin_lock_irqsave(i32* %9, i64 %10)
  %12 = load i32, i32* @WIIPROTO_FLAG_MP_USED, align 4
  %13 = xor i32 %12, -1
  %14 = load %struct.wiimote_data*, %struct.wiimote_data** %3, align 8
  %15 = getelementptr inbounds %struct.wiimote_data, %struct.wiimote_data* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = and i32 %17, %13
  store i32 %18, i32* %16, align 4
  %19 = load %struct.wiimote_data*, %struct.wiimote_data** %3, align 8
  %20 = load i32, i32* @WIIPROTO_REQ_NULL, align 4
  %21 = call i32 @wiiproto_req_drm(%struct.wiimote_data* %19, i32 %20)
  %22 = load %struct.wiimote_data*, %struct.wiimote_data** %3, align 8
  %23 = call i32 @__wiimote_schedule(%struct.wiimote_data* %22)
  %24 = load %struct.wiimote_data*, %struct.wiimote_data** %3, align 8
  %25 = getelementptr inbounds %struct.wiimote_data, %struct.wiimote_data* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i64, i64* %4, align 8
  %28 = call i32 @spin_unlock_irqrestore(i32* %26, i64 %27)
  ret void
}

declare dso_local %struct.wiimote_data* @input_get_drvdata(%struct.input_dev*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @wiiproto_req_drm(%struct.wiimote_data*, i32) #1

declare dso_local i32 @__wiimote_schedule(%struct.wiimote_data*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
